--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Rei do chorume da bolha tech!" class="jsx-75192e1c6fd4560f" />
   <meta property="og:type" content="website" class="jsx-75192e1c6fd4560f" />
   <meta property="og:locale" content="pt_BR" class="jsx-75192e1c6fd4560f" />
-  <meta property="og:title" content="Filipe Deschamps" class="jsx-75192e1c6fd4560f" />
+  <meta property="og:title" content="Mano Deyvin" class="jsx-75192e1c6fd4560f" />
   <meta property="og:description" content="Rei do chorume da bolha tech!" class="jsx-75192e1c6fd4560f" />
   <meta property="og:image" content="/avatar-big.png" class="jsx-75192e1c6fd4560f" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
